Updated the Documentation and small bugs

--- a/App-Deployment/FlaskAPI/base/deployment.yaml
+++ b/App-Deployment/FlaskAPI/base/deployment.yaml
@@ -7,7 +7,7 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: python-app-{version}
+  name: python-app-{name}
   namespace: app
   labels:
     app: python-{version}
