--- a/App-Deployment/FlaskAPI/base/service.yaml
+++ b/App-Deployment/FlaskAPI/base/service.yaml
@@ -2,7 +2,7 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: python-app-{version}
+  name: python-app-{name}
   namespace: app
 spec:
   type: LoadBalancer
